# iroha

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
cmake/: dependencies.cmake  functions.cmake
cmake/Modules/: Findgrpc.cmake  Findgtest.cmake  Findkeccak.cmake  Findspdlog.cmake  Finduv.cmake
core/: CMakeLists.txt
core/crypto/: CMakeLists.txt  crypto.cc  crypto.h  hash.h  keypair.h
core/peer/: CMakeLists.txt  peer.c  peer.cc  peer.h
core/peer/api/: CMakeLists.txt
core/peer/api/client-connection/: CMakeLists.txt  GrpcServerRunner.cc  GrpcServerRunner.h  grpcServerRunner.h  interface.proto  torii.h  toriiImpl.cc  toriiImpl.h
core/peer/api/storage/: CMakeLists.txt  merkle_tree.h
core/peer/client-connection/: .gitignore  CMakeLists.txt  grpcServiceManager.cc  grpcServiceManager.h  torii.cc  torii.h
core/peer/consensus/: CMakeLists.txt
core/peer/storage/: merkle_tree.cc
docker/: docker-compose-ametsuchi-dev.yml  docker-compose-dev.yml
docker/dev/: Dockerfile
docs/: consensus_events.rst  iroha_network.md  iroha_whitepaper.md
examples/: CMakeLists.txt  client.cc  client.h
irohad/: CMakeLists.txt
irohad/ametsuchi/: CMakeLists.txt  block_query.hpp  block_serializer.hpp  command_executor.hpp  mutable_storage.hpp  mutable_storage_stub.cpp  mutable_storage_stub.hpp  storage_stub.cpp  storage_stub.hpp  temporary_wsv.hpp  temporary_wsv_stub.cpp  temporary_wsv_stub.hpp  wsv_query.hpp
irohad/ametsuchi/impl/: block_serializer.cpp  mutable_storage_impl.cpp  mutable_storage_impl.hpp  postgres_wsv_query.cpp  postgres_wsv_query.hpp  storage_impl.cpp  storage_impl.hpp  temporary_wsv_impl.cpp  temporary_wsv_impl.hpp
irohad/api/: CMakeLists.txt  async_server.h
irohad/block_publisher/: block_publisher.cpp  block_publisher.hpp
irohad/consensus/: CMakeLists.txt  consensus_client.cpp  consensus_client.hpp  consensus_service.cpp  consensus_service.hpp  consensus_service_stub.hpp  messages.hpp  peer.hpp  roles.cpp  roles.hpp  smlogger.hpp  sumeragi.cpp  sumeragi.hpp
irohad/consensus/connection/: CMakeLists.txt  communicator.hpp
irohad/consensus/state/: CMakeLists.txt  leader.cpp  leader.hpp  member.cpp  member.hpp  proxy_tail.cpp  proxy_tail.hpp  validator.cpp  validator.hpp
irohad/main/: CMakeLists.txt  application.cpp  application.hpp  context.hpp  iroha-main.cpp  irohad.cpp  irohad.hpp  peer.cpp  peer.hpp  server_runner.hpp
irohad/model/: CMakeLists.txt
irohad/model/commands/: add_asset_quantity.hpp
irohad/model/converters/impl/: pb_command_factory.cpp
irohad/model/impl/: command_execution.cpp  stateful_command_validation.cpp
irohad/network/: CMakeLists.txt  block_publisher.cpp  block_publisher.hpp  block_publisher_with_grpc.cpp  block_publisher_with_grpc.hpp  ordering_client.cpp  ordering_client.hpp  ordering_gate.cpp  ordering_gate.hpp  peer_communication_stub.cpp  peer_communication_stub.hpp
irohad/ordering/: CMakeLists.txt  OrderingService.cpp  OrderingService.hpp  ordering_service.cpp  ordering_service.hpp
irohad/peer_service/: CMakeLists.txt  PeerService.cpp  PeerService.hpp
irohad/storage/: CMakeLists.txt
irohad/torii/: CMakeLists.txt  command_service.cpp
irohad/torii/processor/: CMakeLists.txt  query_processor_stub.hpp  transaction_processor.hpp  transaction_processor_impl.hpp  transaction_processor_stub.cpp  transaction_processor_stub.hpp
irohad/torii/processor/impl/: query_processor_stub.cpp  transaction_processor_impl.cpp  transaction_processor_stub.cpp
irohad/validation/: CMakeLists.txt  stateless_validator.cpp  stateless_validator.hpp
irohad/validation/chain/: validator.hpp  validator_stub.cpp
irohad/validation/stateful/: CMakeLists.txt  command_validator.hpp  stub_command_validator.hpp  validator.hpp
irohad/validation/stateful/impl/: stub_command_validator.cpp  stub_validator.cpp  validator.cpp
irohad/validation/stateless/: CMakeLists.txt  transaction_validator.hpp  validator.hpp
libs/: CMakeLists.txt
libs/common/: types.hpp
libs/crypto/: CMakeLists.txt  keypair.h
libs/dao/: dao_crypto_provider.hpp
libs/datetime/time64/: time64.c
libs/logger/: logger_client.cpp  logger_client.hpp
libs/model/: CMakeLists.txt  model.hpp
libs/model/consensus/: CMakeLists.txt  messages.proto
libs/testing/: CMakeLists.txt  generator.h  tx_generator.h
libs/testing_libs/: CMakeLists.txt
peer/: CMakeLists.txt  peer.cc
peer/api/: CMakeLists.txt  async_server.cc  grpcServerRunner.cc
proto/: CMakeLists.txt  _commands.proto  api.proto
schema/: CMakeLists.txt  asset.proto  block.proto  consensus.proto  endpoint.proto  primitive.proto
schema/schema/: CMakeLists.txt  outside_endpoint.proto
test/: CMakeLists.txt  merkle_tree.cc
test/libs/: CMakeLists.txt
test/module/: CMakeLists.txt
test/module/irohad/: CMakeLists.txt
test/module/irohad/ametsuchi/: CMakeLists.txt  ametsuchi_test.cpp  block_serializer_test.cpp  command_executor_test.cpp
test/module/irohad/consensus/: CMakeLists.txt  consensus_test.cpp  grpc_test.cpp
test/module/irohad/consensus/connection/: CMakeLists.txt
test/module/irohad/peerservice/: peerservice_test.cpp
test/module/irohad/torii/: CMakeLists.txt
test/module/irohad/torii/processor/: CMakeLists.txt  transaction_processor_test.cpp
test/module/irohad/validation/: CMakeLists.txt
test/module/irohad/validation/stateless/: validator_test.cpp
test/scenario/: CMakeLists.txt  test_network.cpp
